@@ -9,6 +9,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [PORTAL] [IDP] Define a new custom cookie name for IDP portal sessions
 ###  Fixed
 - [PORTAL] [VIEWS] Correctly print error messages on self-service page
+- [PORTAL] [SELF_SERVICE] Repair and improve self-service page
 
 
 ## [2.7.0] - 2023-05-24
